--- a/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
+++ b/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +90,43 @@
     "    i, f = int(fi//1), fi % 1\n",
     "    j = i + 1 if f > 0 else i\n",
     "    return (1-f) * inp[i] + f * inp[j]\n",
+    "\n",
+    "# Cleaner implementation of the above function\n",
+    "def interpolate(inp, new_len):\n",
+    "    '''\n",
+    "    Function to perform a linear interpolation to a specified length.\n",
+    "\n",
+    "    :param inp: list/array of values to be interpolated.\n",
+    "    :param new_len: the final size of the interpolated array\n",
+    "    :return: the interpolated array\n",
+    "    '''\n",
+    "    # Calculate the scaling factor to map the original indices to the new indices\n",
+    "    scaling_factor = (len(inp) - 1) / (new_len - 1) # Needs to be -1 to account for python indexing.\n",
+    "\n",
+    "    # Create a new list to store the interpolated values\n",
+    "    interpolated_array = []\n",
+    "\n",
+    "    # Iterate through the new list and calculate the interpolated values\n",
+    "    for i in range(new_len):\n",
+    "        # Calculate the corresponding fractional index in the original list\n",
+    "        fractional_index = i * scaling_factor\n",
+    "\n",
+    "        # Limit the fractional index to be within the valid range of indices in the input list\n",
+    "        fractional_index = min(fractional_index, len(inp) - 1 - 1e-9)\n",
+    "\n",
+    "        # Break the fractional index into its integer part and fractional part\n",
+    "        integer_part, fractional_part = int(fractional_index // 1), fractional_index % 1\n",
+    "\n",
+    "        # Determine the next index in the input list\n",
+    "        next_index = integer_part + 1 if fractional_part > 0 else integer_part\n",
+    "\n",
+    "        # Calculate the interpolated value using a weighted average of the values at the integer part and next index\n",
+    "        interpolated_value = (1 - fractional_part) * inp[integer_part] + fractional_part * inp[next_index]\n",
+    "\n",
+    "        # Append the interpolated value to the new list\n",
+    "        interpolated_array.append(interpolated_value)\n",
+    "\n",
+    "    return interpolated_array\n",
     "\n",
     "def mean_of_middle_20_percent(values):\n",
     "    \"\"\"\n",
@@ -167,50 +204,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cleaner implementation of the above function\n",
-    "def interpolate(inp, new_len):\n",
-    "    '''\n",
-    "    Function to perform a linear interpolation to a specified length.\n",
-    "\n",
-    "    :param inp: list/array of values to be interpolated.\n",
-    "    :param new_len: the final size of the interpolated array\n",
-    "    :return: the interpolated array\n",
-    "    '''\n",
-    "    # Calculate the scaling factor to map the original indices to the new indices\n",
-    "    scaling_factor = (len(inp) - 1) / (new_len - 1) # Needs to be -1 to account for python indexing.\n",
-    "\n",
-    "    # Create a new list to store the interpolated values\n",
-    "    interpolated_array = []\n",
-    "\n",
-    "    # Iterate through the new list and calculate the interpolated values\n",
-    "    for i in range(new_len):\n",
-    "        # Calculate the corresponding fractional index in the original list\n",
-    "        fractional_index = i * scaling_factor\n",
-    "\n",
-    "        # Limit the fractional index to be within the valid range of indices in the input list\n",
-    "        fractional_index = min(fractional_index, len(inp) - 1 - 1e-9)\n",
-    "\n",
-    "        # Break the fractional index into its integer part and fractional part\n",
-    "        integer_part, fractional_part = int(fractional_index // 1), fractional_index % 1\n",
-    "\n",
-    "        # Determine the next index in the input list\n",
-    "        next_index = integer_part + 1 if fractional_part > 0 else integer_part\n",
-    "\n",
-    "        # Calculate the interpolated value using a weighted average of the values at the integer part and next index\n",
-    "        interpolated_value = (1 - fractional_part) * inp[integer_part] + fractional_part * inp[next_index]\n",
-    "\n",
-    "        # Append the interpolated value to the new list\n",
-    "        interpolated_array.append(interpolated_value)\n",
-    "\n",
-    "    return interpolated_array"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -220,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +316,7 @@
        "4  1294a      21     23   SS    R  1294a23SSR  475.980         5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +340,7 @@
      "text": [
       "The individual layer markers for stage 23.0 are: [[0.0, 0.111, 0.23, 0.48, 0.565, 0.71, 1.0], [0.0, 0.125, 0.246, 0.46, 0.522, 0.626, 1.0], [0.0, 0.084, 0.218, 0.36, 0.457, 0.575, 1.0], [0.0, 0.097, 0.236, 0.407, 0.521, 0.638, 1.0]]\n",
       "\n",
-      "The mean layer markers for stage 23.0 are: [0.0, 0.118, 0.238, 0.47, 0.543, 0.668, 1.0]\n"
+      "The mean layer markers for stage 23.0 are: [0.0, 0.104, 0.232, 0.427, 0.516, 0.637, 1.0]\n"
      ]
     }
    ],
@@ -355,16 +348,21 @@
     "# Normalises the layers to the range 0-1.\n",
     "# Based on one bilateral representative sample from each stage (L and R values averaged).\n",
     "normed_markers = []\n",
-    "for i in subset_layer_markers.groupby(\"UNIQUE_ID\"):\n",
-    "    df = i[1]\n",
-    "    layer_values = df['Y'].tolist()\n",
-    "    norm_layer_values = normalise_values(layer_values)\n",
-    "    norm_layer_values = [round(v,3) for v in norm_layer_values]\n",
-    "    normed_markers.append(norm_layer_values)\n",
+    "for i in subset_layer_markers.groupby(\"UNIQUE_ID\"): # groups the data by UNIQUE_ID\n",
+    "    df = i[1] # selects the data for each UNIQUE_ID\n",
+    "    layer_values = df['Y'].tolist() # selects the Y values for each UNIQUE_ID\n",
+    "    norm_layer_values = normalise_values(layer_values) # normalises the Y values for each UNIQUE_ID\n",
+    "    norm_layer_values = [round(v,3) for v in norm_layer_values] # rounds the values to 3 decimal places\n",
+    "    normed_markers.append(norm_layer_values) # appends the normalised values to the list\n",
     "\n",
+    "# THIS WAS THE PROBLEMATIC CODE\n",
     "# Finds the mean position of markers for that stage\n",
-    "mean_normed_markers = [round((g+h)/2,3) for g,h in zip(normed_markers[0],normed_markers[1])]\n",
-    "mean_normed_markers\n",
+    "# mean_normed_markers = [round((g+h)/2,3) for g,h in zip(normed_markers[0],normed_markers[1])]\n",
+    "# mean_normed_markers\n",
+    "\n",
+    "# the updated way of doing this, averages all the markers for each stage\n",
+    "mean_position = lambda normed_markers: [round(sum(positions) / len(positions), 3) for positions in zip(*normed_markers)]\n",
+    "mean_normed_markers = mean_position(normed_markers)\n",
     "\n",
     "print(f'The individual layer markers for stage {stage} are: {normed_markers}\\n')\n",
     "print(f'The mean layer markers for stage {stage} are: {mean_normed_markers}')"
@@ -380,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -514,14 +512,14 @@
        "4             1.816  700.702  951.333  1149.838           TB  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load in all grey values\n",
-    "grey_values = pd.read_excel(\"./endogenous_VGLUT2_datasheet.xlsx\",sheet_name=2) # reads in tab 3, includes all of Toby's sections and most of mine. \n",
+    "grey_values = pd.read_excel(\"./endogenous_VGLUT2_datasheet.xlsx\",sheet_name=2)\n",
     "grey_values.head()"
    ]
   },
@@ -535,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -774,13 +772,14 @@
        "[8605 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Select stage of interest for interpolation.\n",
+    "# Make sure that the stage matches the stage of the layer markers.\n",
     "df_interpolation = grey_values[(grey_values['STAGE']==23.0)&(grey_values['Experimenter']=='TB')] # the excel file is a bit messy, with some of my sections along with Toby's, hence keep the first 4 stages to Toby's data.\n",
     "df_interpolation"
    ]
@@ -796,16 +795,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "956\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the maximum cortical width in um by which all others will be adjusted (stage-by-stage).\n",
     "array_lens = [] # Contains the lengths of each cortical width in um.\n",
     "for a in df_interpolation.groupby('UNIQUE_ID'): # Iterate through each animal.\n",
     "    data = a[1] # Contains the data for that animal.\n",
     "    array_lens.append(len(data['VGLUT2'])) # Append the length of the cortical width in um for that animal.\n",
-    "max_array_len = max(array_lens) # Contains the maximum cortical width in um by which all others will be adjusted."
+    "max_array_len = max(array_lens) # Contains the maximum cortical width in um by which all others will be adjusted.\n",
+    "print(max_array_len)"
    ]
   },
   {
@@ -1032,10 +1040,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Sample_ID</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>norm_Distance</th>\n",
+       "      <th>VGLUT2</th>\n",
+       "      <th>min-max_VGLUT2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>631.453</td>\n",
+       "      <td>0.058430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.001047</td>\n",
+       "      <td>645.596</td>\n",
+       "      <td>0.061933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.002094</td>\n",
+       "      <td>658.974</td>\n",
+       "      <td>0.065247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.003141</td>\n",
+       "      <td>672.040</td>\n",
+       "      <td>0.068483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.004188</td>\n",
+       "      <td>685.179</td>\n",
+       "      <td>0.071738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11467</th>\n",
+       "      <td>1182CP23S23VISRTB</td>\n",
+       "      <td>1182CP23S23VIS</td>\n",
+       "      <td>VIS</td>\n",
+       "      <td>951</td>\n",
+       "      <td>0.995812</td>\n",
+       "      <td>557.644</td>\n",
+       "      <td>0.040148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11468</th>\n",
+       "      <td>1182CP23S23VISRTB</td>\n",
+       "      <td>1182CP23S23VIS</td>\n",
+       "      <td>VIS</td>\n",
+       "      <td>952</td>\n",
+       "      <td>0.996859</td>\n",
+       "      <td>563.398</td>\n",
+       "      <td>0.041573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11469</th>\n",
+       "      <td>1182CP23S23VISRTB</td>\n",
+       "      <td>1182CP23S23VIS</td>\n",
+       "      <td>VIS</td>\n",
+       "      <td>953</td>\n",
+       "      <td>0.997906</td>\n",
+       "      <td>570.089</td>\n",
+       "      <td>0.043230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11470</th>\n",
+       "      <td>1182CP23S23VISRTB</td>\n",
+       "      <td>1182CP23S23VIS</td>\n",
+       "      <td>VIS</td>\n",
+       "      <td>954</td>\n",
+       "      <td>0.998953</td>\n",
+       "      <td>577.404</td>\n",
+       "      <td>0.045042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11471</th>\n",
+       "      <td>1182CP23S23VISRTB</td>\n",
+       "      <td>1182CP23S23VIS</td>\n",
+       "      <td>VIS</td>\n",
+       "      <td>955</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>585.255</td>\n",
+       "      <td>0.046987</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11472 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      ID       Sample_ID Area  Distance  norm_Distance  \\\n",
+       "0       1182AP23S23SSLTB   1182AP23S23SS   SS         0       0.000000   \n",
+       "1       1182AP23S23SSLTB   1182AP23S23SS   SS         1       0.001047   \n",
+       "2       1182AP23S23SSLTB   1182AP23S23SS   SS         2       0.002094   \n",
+       "3       1182AP23S23SSLTB   1182AP23S23SS   SS         3       0.003141   \n",
+       "4       1182AP23S23SSLTB   1182AP23S23SS   SS         4       0.004188   \n",
+       "...                  ...             ...  ...       ...            ...   \n",
+       "11467  1182CP23S23VISRTB  1182CP23S23VIS  VIS       951       0.995812   \n",
+       "11468  1182CP23S23VISRTB  1182CP23S23VIS  VIS       952       0.996859   \n",
+       "11469  1182CP23S23VISRTB  1182CP23S23VIS  VIS       953       0.997906   \n",
+       "11470  1182CP23S23VISRTB  1182CP23S23VIS  VIS       954       0.998953   \n",
+       "11471  1182CP23S23VISRTB  1182CP23S23VIS  VIS       955       1.000000   \n",
+       "\n",
+       "        VGLUT2  min-max_VGLUT2  \n",
+       "0      631.453        0.058430  \n",
+       "1      645.596        0.061933  \n",
+       "2      658.974        0.065247  \n",
+       "3      672.040        0.068483  \n",
+       "4      685.179        0.071738  \n",
+       "...        ...             ...  \n",
+       "11467  557.644        0.040148  \n",
+       "11468  563.398        0.041573  \n",
+       "11469  570.089        0.043230  \n",
+       "11470  577.404        0.045042  \n",
+       "11471  585.255        0.046987  \n",
+       "\n",
+       "[11472 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# To work with the updated, clearer interpolation function. \n",
     "# Interpolate the cortical width in um to the maximum length.\n",
     "interpolated_dict = {'ID':[],'Sample_ID':[],'Area':[],'Distance':[],'norm_Distance':[],'VGLUT2':[]} # To contain the interpolated data.\n",
     "for a in df_interpolation.groupby('UNIQUE_ID'): # Iterate through each animal.\n",
@@ -1046,21 +1236,25 @@
     "    area = data['AREA'].values[0] # Contains the area (i.e., SS or VIS).\n",
     "    inp_vglut2 = data['VGLUT2'].values # Contains the VGLUT2 values.\n",
     "    new_len = max_array_len # Contains the maximum cortical width in um by which all others will be adjusted.\n",
-    "    delta_vglut2 = (len(inp_vglut2)-1) / (new_len-1) # Contains the delta for the interpolation. This is essentially a scaling factor.\n",
+    "\n",
+    "    interpolated_vglut2 = interpolate(inp_vglut2, new_len)  # Interpolate the VGLUT2 values.\n",
+    "\n",
     "    for i in range(new_len): # Iterate through the new length.\n",
-    "        v_vglut2 = round(interpolate(inp_vglut2, i*delta_vglut2),3) # Interpolate the VGLUT2 values.\n",
+    "        v_vglut2 = round(interpolated_vglut2[i], 3) # Get the interpolated VGLUT2 value.\n",
     "        interpolated_dict['VGLUT2'].append(v_vglut2) # Append the interpolated VGLUT2 values.\n",
     "        interpolated_dict['ID'].append(name) # Append the animal ID.\n",
     "        interpolated_dict['Area'].append(area) # Append the area.\n",
     "        interpolated_dict['Distance'].append(distance) # Append the distance.\n",
     "        interpolated_dict['Sample_ID'].append(samp_id) # Append the sample ID.\n",
     "        distance += 1 # Increment the distance counter.\n",
+    "\n",
     "    norm_distance = normalise_values(interpolated_dict['Distance']) # Normalise the distance values.\n",
     "    interpolated_dict.update({'norm_Distance': norm_distance}) # Update the dictionary with the normalised distance values.\n",
+    "\n",
     "min_max = normalise_values(interpolated_dict['VGLUT2']) # Normalise the VGLUT2 values.\n",
     "interpolated_dict.update({'min-max_VGLUT2':min_max}) # Update the dictionary with the normalised VGLUT2 values.\n",
     "interpolated_df = pd.DataFrame(interpolated_dict) # Convert the dictionary to a Pandas DataFrame.\n",
-    "interpolated_df # Check that it worked."
+    "interpolated_df # Check that it worked.\n"
    ]
   },
   {
