Updated, nearly complete tidied up version of the compositional stats script.

--- a/Paolino-2023/comp_stats_notebook.ipynb
+++ b/Paolino-2023/comp_stats_notebook.ipynb
@@ -122,7 +122,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Next, we calculate residuals and add them to the dataframe. \n",
+    "ilr_dfs['p1_residuals'] = ols('ILR_p1 ~ C(Species)', data=ilr_dfs).fit().resid\n",
+    "ilr_dfs['p2_residuals'] = ols('ILR_p2 ~ C(Species)', data=ilr_dfs).fit().resid\n",
+    "ilr_dfs['p3_residuals'] = ols('ILR_p3 ~ C(Species)', data=ilr_dfs).fit().resid\n",
+    "ilr_dfs['p4_residuals'] = ols('ILR_p4 ~ C(Species)', data=ilr_dfs).fit().resid  \n",
+    "ilr_dfs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of assumptions tests for multivariate normality and homogeneity of covariance matrices. \n",
+    "pg.multivariate_normality(ilr_dfs[['p1_residuals','p2_residuals','p3_residuals','p4_residuals']])\n",
+    "pg.box_m(ilr_dfs, dvs=['p1_residuals','p2_residuals','p3_residuals','p4_residuals'], group='Species')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For parametric tests, we use MANOVA or switch to a non-parametric test in R (see Methods).\n",
+    "maov = MANOVA.from_formula('ILR_p1 + ILR_p2 + ILR_p3 + ILR_p4 ~ Species', data=ilr_dfs)\n",
+    "print(maov.mv_test())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate log ratio of geometric means and plot the result.\n",
+    "\n",
+    "def calc_log_ratio(data):\n",
+    "    # Resample the data with replacement\n",
+    "    boot_data = data.sample(n=len(data), replace=True)\n",
+    "    \n",
+    "    # Split the data by condition\n",
+    "    Mm = boot_data[boot_data['Species'] == 'Ms']\n",
+    "    Sc = boot_data[boot_data['Species'] == 'FTD']\n",
+    "    \n",
+    "    # Calculate geometric means\n",
+    "    gm_mm = np.exp(np.mean(np.log(Mm['prop_cells_reg'])))\n",
+    "    gm_sc = np.exp(np.mean(np.log(Sc['prop_cells_reg'])))\n",
+    "\n",
+    "    return np.log(gm_mm/gm_sc)\n",
+    "\n",
+    "# Apply the bootstrapping function for each layer\n",
+    "results = {}\n",
+    "for layer in comp_df['Layer'].unique(): # Loop through each layer\n",
+    "    layer_data = comp_df[comp_df['Layer'] == layer] # Get data for the layer\n",
+    "    print(layer_data)\n",
+    "    boot_results = [calc_log_ratio(layer_data) for _ in range(5000)] # Run bootstrapping\n",
+    "    results[layer] = boot_results # Store results in dictionary\n",
+    "\n",
+    "# Convert results to DataFrame and drop rows with NaN values\n",
+    "results_df = pd.DataFrame(results)\n",
+    "results_df = results_df.dropna()\n",
+    "\n",
+    "# Calculate means for each layer\n",
+    "means = results_df.mean()\n",
+    "\n",
+    "# Calculate 95% confidence intervals for each layer\n",
+    "ci_lower = results_df.apply(lambda x: np.percentile(x, 2.5))\n",
+    "ci_upper = results_df.apply(lambda x: np.percentile(x, 97.5))\n",
+    "\n",
+    "# Calculate 99% confidence intervals for each layer\n",
+    "# ci_lower = results_df.apply(lambda x: np.percentile(x, 0.5))\n",
+    "# ci_upper = results_df.apply(lambda x: np.percentile(x, 99.5))\n",
+    "\n",
+    "# Create bar plot with error bars\n",
+    "plt.figure(figsize=(2,4))\n",
+    "plt.bar(means.index, means.values, yerr=[means.values-ci_lower.values, ci_upper.values-means.values], capsize=4,color=['#009392','#EEB479','#E88471','#F2C6DE'])\n",
+    "plt.xlabel('Staining')\n",
+    "plt.ylabel('Log ratio (Mm/Sc)')\n",
+    "plt.axhline(0,linestyle='--',color='black')\n",
+    "plt.xticks(rotation=45)\n",
+    "sns.despine()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
