--- a/Paolino-2023/comp_stats_notebook.ipynb
+++ b/Paolino-2023/comp_stats_notebook.ipynb
@@ -33,33 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.5.2'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import data from the master CSV file.\n",
-    "sheet = 'name_of_relevant_excel_tab'\n",
-    "comp_df = pd.read_excel('master_file.xlsx', sheet_name=sheet)\n",
+    "sheet = 'name_of_relevant_excel_tab' # Change this to the name of the tab in the master Excel file.\n",
+    "comp_df = pd.read_excel('master_data_Paolino2023.xlsx', sheet_name=sheet)\n",
     "comp_df.head()"
    ]
   },
