--- a/Paolino-2023/comp_stats_notebook.ipynb
+++ b/Paolino-2023/comp_stats_notebook.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "# Import data from the master CSV file.\n",
     "sheet = 'name_of_relevant_excel_tab' # Change this to the name of the tab in the master Excel file.\n",
-    "comp_df = pd.read_excel('master_data_Paolino2023.xlsx', sheet_name=sheet)\n",
+    "comp_df = pd.read_excel('Paolino2023_master_data.xlsx', sheet_name=sheet)\n",
     "comp_df.head()"
    ]
   },
